# aie_lf_dl4vc

./: .README.md.swp  .gitignore  CMakeLists.txt  COPYING  README.md  analyze.sh  bdrate.gdata  bdrate.sh  encode_batch.sh  plot.gscript  plot.sh  png2yuv.sh  transpose
app/: CMakeLists.txt  Makefile  cmake_install.cmake  echo_server.c  eveya_args.h  eveya_bitstream_merge.c  eveya_decoder.c  eveya_encoder.c  eveya_util.h
cfg/: encoder_allintra.cfg  encoder_lowdelay_P.cfg  encoder_randomaccess.cfg  encoder_still_pic.cfg
inc/: evey.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  evey.c  evey_def.h  evey_inter.c  evey_inter.h  evey_intra.c  evey_intra.h  evey_itdq.c  evey_itdq.h  evey_lf.c  evey_lf.h  evey_picman.c  evey_picman.h  evey_port.c  evey_port.h  evey_recon.c  evey_recon.h  evey_tbl.c  evey_tbl.h  evey_util.c  evey_util.h  eveyd.c  eveyd_bsr.c  eveyd_bsr.h  eveyd_def.h  eveyd_eco.c  eveyd_eco.h  eveyd_util.c  eveyd_util.h  eveye.c  eveye_bsw.c  eveye_bsw.h  eveye_def.h  eveye_eco.c  eveye_eco.h  eveye_mode.c  eveye_mode.h  eveye_networking.c  (+13 more)
tools/: refactor_project.py
